[package]
name = "god_and_jobs"
version = "0.1.0"
authors = ["mewosmith <48843615+mewosmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"
serde-xml-rs = "0.3.1"
toml = "0.5.3"